fix: #29441, reduced police size for zone text on mobile

--- a/src/main/resources/public/sass/global/_exercizer-specifics.scss
+++ b/src/main/resources/public/sass/global/_exercizer-specifics.scss
@@ -901,4 +901,9 @@ body.exercizer {
   .left-margin-5 {
     margin-left: 5px;
   }
+  @media screen and (max-width: $fat-mobile) {
+   .text-zone-size {
+    font-size: 70%;
+   }
+  }
 }
